# parsers-exporter-service-1

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc  README.md  docker-compose.dev.yml  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml
.github/workflows/: cd-dev.yml  cd-production.yml  cd-staging.yml  ci-tests.yml
argocd/: dev.yaml  prod.yaml  stage.yaml
docker/: Dockerfile.exporter  Dockerfile.seeder  Dockerfile.writer
docs/: MIGRATION.md  VAULT_PATHS.md  agents.md
docs/legacy/: DATA_EXPORTERS.md  DEPLOY_HOWTO.md  DEV_DOC.md
helm/aragog-exporters/: .helmignore  Chart.yaml  values-dev.yaml  values-prod.yaml  values-stage.yaml  values.yaml
helm/aragog-exporters/dashboards/: exporter-overview.json  infrastructure.json  writer-overview.json
helm/aragog-exporters/templates/: NOTES.txt  _helpers.tpl  alertmanager-config.yaml  deployment-exporter.yaml  deployment-writer.yaml  grafana-dashboards.yaml  hpa-exporter.yaml  hpa-writer.yaml  namespace-sa.yaml  pgbouncer.yaml  prometheusrule.yaml  service.yaml  servicemonitor.yaml
init-scripts/clickhouse/: 01-init-tables.sql
init-scripts/postgres/: 01-init-schemas.sql
libs/common/: health.py  models.py  notifier.py  pyproject.toml
libs/common/schemas/: __init__.py  contacts.py  menu.py  org_data.py  reviews.py
libs/observability/: metrics.py  pyproject.toml
scripts/: ci_validate.py  staging_seeder.py
services/ch-writer/: main.py  pyproject.toml
services/ch_writer/: main.py  pyproject.toml
services/delivery_exporter/: main.py  pyproject.toml
services/exporter-base/: base.py  pyproject.toml
services/exporter_base/: base.py  pyproject.toml
services/org-exporter/: main.py  pyproject.toml
services/org_exporter/: main.py  pyproject.toml
services/pg-writer/: main.py  pyproject.toml
services/pg_writer/: main.py  pyproject.toml
services/review-exporter/: main.py  pyproject.toml
services/review_exporter/: main.py  pyproject.toml
services/sitemap_exporter/: main.py  pyproject.toml
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_pipeline.py
tests/unit/: test_base.py  test_org_validator.py  test_review_validator.py  test_schemas.py  test_writers_config.py
