[project]
name = "aragog-exporters"
version = "0.1.0"
requires-python = ">=3.10"
description = "Event-Driven Architecture for parsers-exporter-service: 4 exporter types (Redis → Kafka) + 2 writer types (Kafka → PostgreSQL/ClickHouse)"

[tool.uv.workspace]
members = [
    "services/exporter-base",
    "services/org-exporter",
    "services/delivery-exporter",
    "services/sitemap-exporter",
    "services/review-exporter",
    "services/pg-writer",
    "services/ch-writer",
    "libs/common",
    "libs/observability",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "fakeredis[json]>=2.21",
    "hypothesis>=6.92",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "yamllint>=1.35",
    "faker>=24.0",
    "mypy>=1.8",
    "types-redis>=4.6",
    "types-PyYAML>=6.0",
    "pyyaml>=6.0",
    "msgspec>=0.19",
    "uvloop>=0.21",
]
